Catalog promo backspace fix, delete button fix Show new catalog layout for supplier Filter disabled emails from supplier/buyer notifications Hide 'Add Lot' text from simple inventory Swap order CSV export columns (product code, product name) Hide non-seller fields if 'Is Seller' not checked Fix ' on Newsletters Fix upcoming deliveries layout on Firefox

--- a/app/assets/stylesheets/modules-base.css.scss
+++ b/app/assets/stylesheets/modules-base.css.scss
@@ -1165,7 +1165,7 @@
   }
   &[data-tools="6"] {
     > .tool {
-      width: 16.66%;
+      width: 16.2%;
     }
   }
   &[data-tools="5"] {
